Add buttons instead of links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -31,11 +31,11 @@
                   Beyond my technical expertise, I am passionate about leveraging AI for the betterment of society. In Summer 2023, I collaborated with <a href="https://www.redcross.org/">Red Cross</a> in analyzing post-disaster satellite images to determine the number of damaged buildings to expedite relief process.
                 </p>
                 <p style="text-align:center">
-                  <a href="data/Debanjan Mondal Resume.pdf">Resume</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/debanjanmondal702/">LinkedIn</a> &nbsp;/&nbsp;
-                  <a href="mailto:debanjanmond@umass.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?user=F7j71ZsAAAAJ&hl=en&authuser=1">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Demon702/">Github</a>
+                  <a href="data/Debanjan Mondal Resume.pdf" class="button">Resume</a> &nbsp;&nbsp;
+                  <a href="https://www.linkedin.com/in/debanjanmondal702/" class="button">LinkedIn</a> &nbsp;&nbsp;
+                  <a href="mailto:debanjanmond@umass.edu" class="button">Email</a> &nbsp;&nbsp;
+                  <a href="https://scholar.google.com/citations?user=F7j71ZsAAAAJ&hl=en&authuser=1" class="button">Scholar</a> &nbsp;&nbsp;
+                  <a href="https://github.com/Demon702/" class="button">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
