--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   I completed my Bachelor's in Computer Science from <a href="https://www.iitb.ac.in/">Indian Institute of Technology (IIT) Bombay</a> in 2020. After that I worked as a Full Stack Software Engineer at <a href="https://lgads.tv/">LG Ad Solutions</a> for two years. I also had the opportunity to intern at <a href="https://www.ubisoft.com/en-us/">Ubisoft</a>.
                 </p>
                 <p>
-                  Beyond my technical expertise, I am passionate about leveraging AI for the betterment of society, environment. I am also an avid enthusiast of animal biodiversity and eager to contribute in conservation efforts. In Summer 2023, I collaborated with <a href="https://www.redcross.org/">Red Cross</a> in analyzing pre and post-disaster satellite images to determine the number of damaged buildings in disaster-hit areas. This effort helped to expedite relief processes. I am also passionate about animal biodiversity and eager to contribute in conservation efforts.  
+                  Beyond my technical expertise, I am passionate about leveraging AI for the betterment of society and environment. In Summer 2023, I collaborated with <a href="https://www.redcross.org/">Red Cross</a> in analyzing pre and post-disaster satellite images to determine the number of damaged buildings in disaster-hit areas. This effort helped to expedite relief processes. I am also passionate about animal biodiversity and eager to contribute in conservation efforts.  
                 </p>
                 <p style="text-align:center">
                   <a href="data/Debanjan Mondal Resume.pdf" class="button">Resume</a> &nbsp;&nbsp;
