Add WorldValauesBench paper link

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         <br>
         <em>arXiv</em>, 2023
         <br>
-        <a href="https://github.com/Demon702/value_alignment">code</a>
+        <a href="https://github.com/Demon702/WorldValuesBench">code</a>
         /
-        <a href="https://arxiv.org/abs/">arXiv</a>
+        <a href=https://arxiv.org/abs/2404.16308">arXiv</a>
         <p></p>
         <p>
           We proposed WORLDVALUEBENCHMARK, the first global-scale dataset to study multi-cultural human value alignment in LMs.
