--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <br>
         <a href="https://github.com/Demon702/WorldValuesBench">code</a>
         /
-        <a href=https://arxiv.org/abs/2404.16308">arXiv</a>
+        <a href=https://arxiv.org/abs/2404.16308>arXiv</a>
         <p></p>
         <p>
           We proposed WORLDVALUEBENCHMARK, the first global-scale dataset to study multi-cultural human value alignment in LMs.
